# rust_howto

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  .lycheecache  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STATUS.md  TODO.md  book.toml  book.toml.bak  deny.toml  justfile  rustfmt.toml
bk/: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Cargo.toml  book.toml  justfile
bk/.cargo/: config.toml
bk/.config/: nextest.toml
bk/crates/: Cargo.toml  README.md  rustfmt.toml
bk/crates/.cargo/: config.toml
bk/crates/.config/: nextest.toml
bk/crates/about/: Cargo.toml  README.md
bk/crates/code_organization/: Cargo.toml  README.md
bk/crates/code_structure/: Cargo.toml
bk/crates/language/: Cargo.toml  README.md
bk/crates/other/: Cargo.toml  README.md
bk/crates/proc_macros/: Cargo.toml  README.md
bk/crates/standard_library/: Cargo.toml  README.md
bk/crates/utils/: Cargo.toml  README.md
bk/drafts/: FRAGMENTS.md  SUMMARY.md  TOREVIEW.md  examples_index.md  inheritance.incl.md  inheritance.md  overflow.incl.md  overflow.md  plugin.incl.md  plugin.md  predicates.md  refs.incl.md  self_referential.incl.md  self_referential.md  thanks.md
bk/drafts/categories/: categories.md
bk/drafts/contributing/: api_documentation.md  dev_container_docker.incl.md  dev_container_docker.md  dev_environment_setup.md  development_editing.incl.md  development_editing.md  index.md  optional_preprocessors.incl.md  optional_preprocessors.md  publication.incl.md  publication.md  refs.incl.md  repo_structure.md  topics_of_interest.md  vscode.incl.md  vscode.md
bk/drafts/crate_selection/: index.md  refs.incl.md
bk/drafts/crates/: crates_alphabetical.md  crates_by_category.md  index.md
bk/drafts/indices/: categories.md  crates_alphabetical.md  crates_and_examples.incl.md  crates_and_examples.md  crates_by_category.md  crates_by_category2.md  examples_index.md  refs.incl.md
bk/drafts/language/: attributes.incl.md  attributes.md  closures.incl.md  closures.md  constants_and_statics.md  control_flow.incl.md  control_flow.md  data_types.incl.md  data_types.md  entrypoint.md  enums.incl.md  enums.md  functions.incl.md  functions.md  generic_traits.incl.md  generic_traits.md  generics.incl.md  generics.md  impl_trait.md  index.incl.md  index.md  iterators.incl.md  iterators.md  lifetimes.incl.md  lifetimes.md  macros.incl.md  macros.md  match.incl.md  match.md  naming_conventions.incl.md  naming_conventions.md  ownership_borrowing.md  refs.incl.md  rust_install.md  slices.incl.md  slices.md  structs.md  trait_objects.md  traits.incl.md  traits.md  (+3 more)
bk/drafts/links/: blogs.incl.md  blogs.md  blogs_podcasts_meetups.incl.md  books.incl.md  books.md  companies.incl.md  companies.md  example_code.incl.md  example_code.md  index.incl.md  index.md  learning.incl.md  learning.md  links.incl.md  links.md  meetings.md  refs.incl.md  rust_cheatsheets.md  videos.md
bk/drafts/standard-library/: asref.incl.md  asref.md  box.incl.md  box.md  cow.incl.md  cow.md  derive.incl.md  derive.md  (+13 more)
bk/later/: SUMMARY.md
bk/later_crates/: Cargo.toml  README.md  justfile  rustfmt.toml
bk/master/: README.md  crates.txt  crates_used_in_drafts_and_later_sections.txt
bk/scripts/: README.md  justfile
bk/src/: SUMMARY.md  examples_index.md  index.md  refs.incl.md  thanks.md
crates/autogen/: Cargo.toml  README.md
crates/clean/: Cargo.toml
crates/crate_indices/: Cargo.toml  crates.txt
crates/playground/: Cargo.toml
crates/standard_library/: Cargo.toml
crates/tool_lib/: Cargo.toml  README.md
mdbook-scrub/: .markdownlint.yaml  Cargo.toml  README.md  justfile  rustfmt.toml
mdbook-scrub/.cargo/: config.toml
mdbook-scrub/src/: conf.rs  lib.rs  main.rs  regexes.rs
mdbook-scrub/test_book/: book.toml
mdbook-scrub/tests/: test.rs
mdbook-utils/: Cargo.toml  README.md
mdbook-utils/src/: dependencies.rs  lib.rs  sitemap.rs
playground/: .pre-commit-config.yaml  Cargo.toml  README.md  justfile
playground/.cargo/: config.toml
playground/autogen/: Cargo.toml
playground/bits_and_pieces/: deny.toml  walk_dir.rs
playground/directives/: Cargo.toml
playground/drafts/: build-info.rs  build.rs  justfile.2  workflow.yml
playground/examples/: inline_links.rs  inquire.rs  main_test.rs  sync_send_impl.rs  tracing_test.rs
playground/examples_wip/: Cargo.toml
playground/links/: Cargo.toml
playground/scripts/: inline_links.rs  script_template.rs
playground/src/: main.rs
publish/: Cargo.toml  LICENSE-MIT  README.md  justfile
publish/.cargo/: config.toml
publish/src/: main.rs
tools/: Cargo.toml  README.md  hide.sh  justfile  unhide.sh
tools/.cargo/: config.toml
tools/autogen/: Cargo.toml  README.md
tools/clean/: Cargo.toml  README.md
tools/crate_indices/: Cargo.toml  README.md  crates.txt
tools/hide/: hiddenfiles.txt
tools/inline_links/: Cargo.toml
tools/links/: Cargo.toml
tools/mdbook-scrub/: Cargo.toml  README.md
tools/rust_rate/: Cargo.toml
tools/src/: lib.rs  model.rs
tools/templ/: Cargo.toml  README.md
tools/tool_lib/: Cargo.toml  README.md
utils/: Cargo.toml  README.md
utils/src/: build_book.rs  debug.rs  dependencies.rs  dir.rs  extract.rs  extract_code.rs  file.rs  github.rs  include.rs  lib.rs  link.rs  md.rs  test_markdown.rs
wip/: Cargo.toml  justfile  rustfmt.toml
wip/.cargo/: config.toml
wip/core_lib/: Cargo.toml
wip/directive_lib/: Cargo.toml
wip/inline_links/: Cargo.toml
wip/link_checker/: Cargo.toml
wip/parse_lib/: Cargo.toml
wip/process_directives/: Cargo.toml
xmpl/: Cargo.toml  README.md  justfile
xmpl/.cargo/: config.toml
xmpl/cancelable/: Cargo.toml  README.md
xmpl/clap_builder_xmpl/: Cargo.toml  README.md
xmpl/crossbeam_channel_example/: Cargo.toml
xmpl/dashmap_example/: Cargo.toml
xmpl/miette_example/: Cargo.toml
xmpl/mix_blocking_and_async/: Cargo.toml
xmpl/scripts/: runall.sh
xmpl/stream_example/: Cargo.toml
xmpl/streams/: Cargo.toml
xmpl/tokio/: Cargo.toml
xmpl/tokio_example/: Cargo.toml
(+8010 files in other folders)
