[workspace]
resolver = "2"
members = [
    # project that contains most code examples in the book - see `tests` and `examples` folders
    "deps",
    # crates.io placeholder
    "publish",
    "crates/*",
    # examples independent from the book markdown
    "xmpl/*"]
exclude = []
# Only check / build the main crate by default (check / build all with `--workspace`)
default-members = ["deps"]

# Default values for packages in the workspace
[workspace.package]
version = "0.1.2"
authors = ["John CD"]
edition = "2021"
rust-version = "1.80"
description = "A documentation summary and a compendium of snippets and recipes for the Rust language and ecosystem. Everything you need for day-to-day Rust coding, all in one place."
documentation = "https://docs.rs/rust_howto/"
homepage = "https://john-cd.com/rust_howto/"
repository = "https://github.com/john-cd/rust_howto/"
license-file = "LICENSE"
keywords = ["patterns", "cookbook", "howto", "how-to", "documentation"]
categories = ["algorithms", "asynchronous", "concurrency", "web-programming", "development-tools"]
publish = false
