[workspace]
resolver = "2"
members = [
    #"crates/about",
    "crates/categories/*",
    #"crates/language",
    #"crates/other",
    "crates/playground",
    "crates/publish", # crates.io placeholder
    #"crates/standard_library",
    "crates/tools/*",
    "crates/xmpl/*", # examples independent from the book markdown
    ]
exclude = []
# Only check / build the main crate by default (check / build all with `--workspace`)
default-members = [] #"crates/categories/*"

# Default values for packages in the workspace
[workspace.package]
version = "0.1.2"
authors = ["John CD"]
edition = "2024"
rust-version = "1.85"
description = "A documentation summary and a compendium of snippets and recipes for the Rust language and ecosystem. Everything you need for day-to-day Rust coding, all in one place."
documentation = "https://docs.rs/rust_howto/"
homepage = "https://john-cd.com/rust_howto/"
repository = "https://github.com/john-cd/rust_howto/"
license-file = "LICENSE"
keywords = ["patterns", "cookbook", "howto", "how-to", "documentation", "Rust bible"]
categories = ["algorithms", "asynchronous", "concurrency", "web-programming", "development-tools", "api-bindings", "caching", "command-line-interface", "compilers", "compression"]
publish = false
