[workspace]
resolver = "2"
members = [
    "crates/ex/about",
    "crates/ex/cats/*",
    "crates/ex/language",
    "crates/ex/other",
    "crates/ex/standard_library",
    "crates/playground",
    "crates/publish", # crates.io placeholder
    "crates/tools/*",
    "crates/xmpl/*", # examples independent from the book markdown
    ]
exclude = []
default-members = ["crates/ex/about", "crates/ex/cats/*", "crates/ex/language", "crates/ex/other", "crates/ex/standard_library",]

# Default values for packages in the workspace
[workspace.package]
version = "0.1.2"
authors = ["John CD"]
edition = "2024"
rust-version = "1.85"
description = "A documentation summary and a compendium of snippets and recipes for the Rust language and ecosystem. Everything you need for day-to-day Rust coding, all in one place."
documentation = "https://docs.rs/rust_howto/"
homepage = "https://john-cd.com/rust_howto/"
repository = "https://github.com/john-cd/rust_howto/"
license-file = "LICENSE"
keywords = ["patterns", "cookbook", "howto", "how-to", "documentation", "Rust bible"]
categories = ["algorithms", "asynchronous", "concurrency", "web-programming", "development-tools", "api-bindings", "caching", "command-line-interface", "compilers", "compression"]
publish = false

[workspace.dependencies]
anyhow = "1.0.95"
approx = "0.4.0" # pin
async-trait = "0.1.85"
lazy_static = "1.5.0"
once_cell = "1.20.2"
ndarray = "0.15.6" # pinned to 0.15.6 for linfa
rand = "0.9.0-beta.3" # use beta
regex = "1.11.1"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
walkdir = "2.5.0"
