[package]
name = "mdbook-scrub"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A mdbook preprocessor"
readme = "README.md"
homepage = "https://github.com/john-cd/rust_howto/"
keywords = ["book", "mdbook", "rustbook", "documentation"]
categories = [
    "command-line-utilities",
    "text-processing",
    "parser-implementations",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = "4.5.29"
futures-util = "0.3.31"
mdbook = "=0.4.35"                                    # pinned
moka = { version = "0.12.10", features = ["future"] }
# simd available for the x64 platform
pulldown-cmark = { version = "0.13.0", default-features = false, features = [
    "simd",
] }
regex = "1.11.1"
reqwest = "0.12.12"
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8.20" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
url = "2.5.4"
