[package]
name = "mdbook-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tools to manage links, reference definitions, code examples in Markdown files, especially `mdbook` source directories."
readme = "README.md"
homepage = "https://github.com/john-cd/rust_howto"
repository.workspace = true
license = "MIT OR Apache-2.0"
keywords = [ "documentation", "markdown", "book", "mdbook", "rustbook" ]
categories = [ "parser-implementations", "parsing", "text-processing", "development-tools", "command-line-utilities" ]
workspace = ".."
#exclude.workspace = true
#include.workspace = true
publish = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
dialoguer = "0.11.0"
enumflags2 = "0.7.8"
heck = "0.4.1"
once_cell = "1.19.0"
pulldown-cmark = "0.9.4"
# pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
pulldown-cmark-to-cmark = "11.2.0"
quick-xml = "0.31.0"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
walkdir = "2.4.0"
