# This crate is a placeholder published to crates.io to make rust_howto searchable there.
[package]
name = "rust_howto"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
keywords.workspace = true
categories.workspace = true
workspace = ".."
#exclude.workspace = true
#include.workspace = true
publish = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.21.0"
