[package]
name = "rust_howto_tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tools & templates for the rust_howto book"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
tinytemplate = "1.2.1"
serde = { version = "1.0.213", features = ["derive"] }
anyhow = "1.0.91"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.20", features = ["cargo"] }
crates_io_api = "0.11.0"
itertools = "0.13.0"
cargo_toml = "0.20.5"
