[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.17", features = ["derive"] }
csv = "1.3.0"
heck = "0.4.1"
once_cell = "1.19.0"
pulldown-cmark = "0.9.3"
# pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
pulldown-cmark-to-cmark = "11.0.2"
quick-xml = "0.31.0"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
walkdir = "2.4.0"
