[workspace]
resolver = "3"
members = [ "core_lib", "process_directives", "link_checker", "inline_links", "parse_lib", "directive_lib"]

# Default values for packages in the workspace
[workspace.package]
version = "0.1.2"
authors = ["John CD"]
edition = "2024"
rust-version = "1.86"
description = ""
documentation = "https://docs.rs/rust_howto/"
homepage = "https://john-cd.com/rust_howto/"
repository = "https://github.com/john-cd/rust_howto/wip/"
keywords = []
categories = []
publish = false
license = "MIT OR Apache-2.0"
