[package]
name = "autogen"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = ""
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
anyhow = "1.0.92"
tool_lib = { path = "../tool_lib" }
tera = "1.20.0"
url = "2.5.2"
walkdir = "2.5.0"
serde = "1.0.214"
