[package]
name = "playground"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
#anyhow.workspace = true
inquire = "0.7.5"
tracing.workspace = true
tracing-subscriber.workspace = true
#walkdir.workspace = true
