[package]
name = "playground"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
#anyhow = "1.0.95"
inquire = "0.7.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
#walkdir = "2.5.0"
