[package]
name = "standard_library"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Book code examples and their crate dependencies"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license = "CC0-1.0"
keywords.workspace = true
categories.workspace = true
publish = false
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

## The dependencies that are NOT USED (YET) in examples are marked `optional = true`,
## in order to keep the compile speed decent.
## Remove the optional flag as needed.
[dependencies]
anyhow = "1.0.94"
concat-string = "1.0.1"
concat_strs = "1.0.2"
derive_more = { version = "1.0.0", features = ["full"] }
thiserror = "2.0.8"
