[package]
name = "tool_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tools & templates for the rust_howto book"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["markdown generation"]
categories = ["development-tools", "command-line-utilities", "text-processing"]
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
tinytemplate = "1.2.1"
serde = { version = "1.0.214", features = ["derive"] }
anyhow = "1.0.91"
tracing = "0.1.40"
crates_io_api = "0.11.0"
