[package]
name = "directives"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.11.1"
walkdir = "2.5.0"
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
nom = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
