[package]
name = "autogen"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = ""
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
keywords = ["markdown generation"]
categories = ["development-tools", "command-line-utilities", "text-processing"]
publish = false

[dependencies]
#anyhow = "1.0.95"
#pgp = "0.14.2"
#serde = { version = "1.0.217", features = ["derive"] }
#tera = "1.20.0"
tool_lib = { path = "../tool_lib" }


[[bin]]
name = "autogen"
path = "src/main.rs"
