[package]
name = "clean"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A very simnple tool to clean `temp` folders before and after testing."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
keywords = ["cleanup before / after testing"]
categories = ["development-tools", "command-line-utilities"]
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
tempfile = "3.23.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"
