[package]
name = "crate_indices"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = ""
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
keywords = ["markdown generation"]
categories = ["development-tools", "command-line-utilities", "text-processing"]
publish.workspace = true

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["cargo"] }
itertools = "0.13.0"
tool_lib = { path = "../tool_lib" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
cargo_toml = "0.20.5"
