[package]
name = "links"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.31", features = ["derive"] }
regex = "1.11.1"
tempfile = "3.19.1"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"
