[package]
name = "rust_rate"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = ""
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["statistics", "ecosystem"]
categories = ["development-tools", "command-line-utilities"]
publish.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["cargo"] }
clap_builder = "4.5.20"
tool_lib = { path = "../tool_lib" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
