[package]
name = "tool_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tools & templates for the rust_howto book"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["markdown generation"]
categories = ["development-tools", "command-line-utilities", "text-processing"]
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.95"
cargo_toml = "0.22.1"
crates_io_api = "0.12.0"
itertools = "0.14.0"
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
similar = "2.6.0"
# FIXME
#tera = "1.20.0"
tinytemplate = "1.2.1"
toml = "0.9.5"
tracing = "0.1.41"
trim-in-place = "0.1.7"
walkdir = "2.5.0"

[dev-dependencies]
chrono = "0.4.40"
mockito = "1.7.0"
serde_json = "1.0"
tempfile = "3.23.0"
url = "2.5"
