[package]
name = "external_link_checker"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
moka = { version = "0.12.10", features = ["future"] }
reqwest = "0.12.22"
url = "2.5.4"
tokio = { version = "1.46.0", features = ["full"] }
futures-util = "0.3.31"
core_lib = { path = "../core_lib" }
