[package]
name = "parse_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.95"
# FIXME
#tracing = "0.1.41"
url = "2.5.4"
#directive_lib = { path = "../directive_lib" }
winnow = "0.7.11"
annotate-snippets = "0.11.5"
fmt2io = "1.0.0"
multimap = "0.10.0"
