[package]
name = "process_directives"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.40", features = ["derive"] }
# FIXME
#tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
core_lib = { path = "../core_lib" }
directive_lib = { path = "../directive_lib" }
